# OpenPA

./: .gitignore  Makefile  README.md  docker-compose.yml  main.blg
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  config.py  main.py  pyproject.toml
backend/chat/: telegram_bot.py
backend/db/: auth.py  conversations.py  database.py
backend/llm/: agent.py  base.py  claude_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  providers.py
backend/prompts/: system.py
backend/services/: oauth.py  rag.py  rest_api.py
backend/tests/: conftest.py  test_auth.py  test_mcp_registry.py  test_memory.py  test_rss.py  test_tools_no_creds.py  test_weather.py  test_web_search.py
backend/tools/: calendar.py  credentials.py  discord_tool.py  github.py  gmail.py  google_drive.py  mastodon.py  mcp_sort.py  memory.py  registry.py  rss.py  sandbox.py  scheduled_jobs.py  scheduler.py  spotify.py  telegram.py  weather.py  web_scrape.py  web_search.py  workspace.py  youtube.py
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/public/: slides.html
frontend/src/__tests__/: api.test.ts  login.test.tsx  utils.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: nav.tsx  sidebar.tsx
report/: main.aux  main.bbl  main.bcf  main.blg  main.out  main.tex  main.toc  references.bib
report/sections/: architecture.tex  conclusion.tex  evaluation.tex  examples.tex  gap.tex  introduction.tex  literature.tex  problem.tex  solution.tex
slides/: index.html
(+9 files in other folders)
